sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: '(' expected but identifier found.
      if plusPetit((i+ecart),i){
         ^